Added additional links

--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
         <a href="https://seanervinson.com/admin/">Website Admin</a>
         <a href="https://github.com/SeanErvinson"></a>
     </div>
+    <div>
+        <h2>Analytics</h2>
+        <a
+            href="https://analytics.google.com/analytics/web/?authuser=2#/report-home/a121852812w195165730p190438832">seanervinson</a>
+    </div>
+    <div>
+        <h2>Misc</h2>
+        <a href="https://10fastfingers.com/typing-test/english">Typing Test</a>
+        <a href="https://translate.google.com/#view=home&op=translate&sl=ja&tl=en">Translate (JP → EN)</a>
+        <a
+            href="https://onedrive.live.com/redir?resid=3F911DB461B19F3D%211172&page=Edit&wd=target%28Database.one%7C22c82ded-74fe-40bb-b3d7-5b0f88e17a2a%2FNoSQL%7C75a5fe81-dfa6-466f-85a3-02997ca96c15%2F%29">SE
+            Notebook</a>
+    </div>
     <script src="main.js"></script>
 </body>
 
